replace Guava with Java 8 stream API