@@ -29,8 +29,6 @@ import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 import org.testng.Assert;
 
-import com.google.common.collect.ImmutableMap;
-
 import static org.killbill.billing.platform.config.DefaultKillbillConfigSource.ENVIRONMENT_VARIABLE_PREFIX;
 
 public class TestDefaultKillbillConfigSource {
@@ -80,10 +78,10 @@ public class TestDefaultKillbillConfigSource {
         final String unencryptedValue = "myPropertyValue";
         final String encryptedValue = encString(unencryptedValue);
 
-        final Map<String, String> properties = ImmutableMap.of(ENABLE_JASYPT_PROPERTY, "false",
-                                                               ENCRYPTED_PROPERTY_1, encryptedValue,
-                                                               JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
-                                                               JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
+        final Map<String, String> properties = Map.of(ENABLE_JASYPT_PROPERTY, "false",
+                                                      ENCRYPTED_PROPERTY_1, encryptedValue,
+                                                      JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
+                                                      JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
 
         final DefaultKillbillConfigSource configSource = new DefaultKillbillConfigSource(properties);
 
@@ -96,10 +94,10 @@ public class TestDefaultKillbillConfigSource {
     public void testDecryptEmptyPassword() throws IOException, URISyntaxException {
         final String encryptedValue = encString("myPropertyValue");
 
-        final Map<String, String> properties = ImmutableMap.of(ENABLE_JASYPT_PROPERTY, "true",
-                                                               ENCRYPTED_PROPERTY_1, encryptedValue,
-                                                               JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, "",
-                                                               JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
+        final Map<String, String> properties = Map.of(ENABLE_JASYPT_PROPERTY, "true",
+                                                      ENCRYPTED_PROPERTY_1, encryptedValue,
+                                                      JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, "",
+                                                      JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
 
         new DefaultKillbillConfigSource(properties);
     }
@@ -108,10 +106,10 @@ public class TestDefaultKillbillConfigSource {
     public void testDecryptEmptyAlgorithm() throws IOException, URISyntaxException {
         final String encryptedValue = encString("myPropertyValue");
 
-        final Map<String, String> properties = ImmutableMap.of(ENABLE_JASYPT_PROPERTY, "true",
-                                                               ENCRYPTED_PROPERTY_1, encryptedValue,
-                                                               JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
-                                                               JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, "");
+        final Map<String, String> properties = Map.of(ENABLE_JASYPT_PROPERTY, "true",
+                                                      ENCRYPTED_PROPERTY_1, encryptedValue,
+                                                      JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
+                                                      JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, "");
 
         new DefaultKillbillConfigSource(properties);
     }
@@ -120,10 +118,10 @@ public class TestDefaultKillbillConfigSource {
     public void testDecryptInvalidJasyptString() throws IOException, URISyntaxException {
         final String encryptedValue = "ENC(notAValidEncryptedString!)";
 
-        final Map<String, String> properties = ImmutableMap.of(ENABLE_JASYPT_PROPERTY, "true",
-                                                               ENCRYPTED_PROPERTY_1, encryptedValue,
-                                                               JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
-                                                               JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
+        final Map<String, String> properties = Map.of(ENABLE_JASYPT_PROPERTY, "true",
+                                                      ENCRYPTED_PROPERTY_1, encryptedValue,
+                                                      JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
+                                                      JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
 
         new DefaultKillbillConfigSource(properties);
     }
@@ -132,10 +130,10 @@ public class TestDefaultKillbillConfigSource {
     public void testDecryptEmptyJasyptString() throws IOException, URISyntaxException {
         final String encryptedValue = "ENC()";
 
-        final Map<String, String> properties = ImmutableMap.of(ENABLE_JASYPT_PROPERTY, "true",
-                                                               ENCRYPTED_PROPERTY_1, encryptedValue,
-                                                               JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
-                                                               JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
+        final Map<String, String> properties = Map.of(ENABLE_JASYPT_PROPERTY, "true",
+                                                      ENCRYPTED_PROPERTY_1, encryptedValue,
+                                                      JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
+                                                      JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
 
         new DefaultKillbillConfigSource(properties);
     }
@@ -147,11 +145,11 @@ public class TestDefaultKillbillConfigSource {
         final String unencryptedValue2 = "myOtherPropertyValue";
         final String encryptedValue2 = encString(unencryptedValue2);
 
-        final Map<String, String> properties = ImmutableMap.of(ENABLE_JASYPT_PROPERTY, "true",
-                                                               ENCRYPTED_PROPERTY_1, encryptedValue1,
-                                                               ENCRYPTED_PROPERTY_2, encryptedValue2,
-                                                               JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
-                                                               JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
+        final Map<String, String> properties = Map.of(ENABLE_JASYPT_PROPERTY, "true",
+                                                      ENCRYPTED_PROPERTY_1, encryptedValue1,
+                                                      ENCRYPTED_PROPERTY_2, encryptedValue2,
+                                                      JASYPT_ENCRYPTOR_PASSWORD_PROPERTY, JASYPT_PASSWORD,
+                                                      JASYPT_ENCRYPTOR_ALGORITHM_PROPERTY, JASYPT_ALGORITHM);
 
         final DefaultKillbillConfigSource configSource = new DefaultKillbillConfigSource(properties);
 
